--- a/config.json
+++ b/config.json
@@ -1,5 +1,9 @@
 {
-    "launchpadLink": "https://www.magiceden.io/launchpad/moonly",
-    "seedPhrase": "hire method athlete behind where detect estate spice obscure dawn aspect swift",
-    "password": "080504ddDD"
+    "launchpadLink": "https://www.magiceden.io/launchpad/",
+    "seedPhrase": "paste_your_phrase_here",
+    "password": "paste_your_password_here",
+    "project_settings" : {
+        "tries": 10,
+        "close_browser_after_mint": true
+    }
 }
