--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "launchpadLink": "https://www.magiceden.io/launchpad/",
-    "seedPhrase": "paste_your_phrase_here",
-    "password": "paste_your_password_here",
+    "launchpadLink": "https://www.magiceden.io/launchpad/trippin_ape_tribe",
+    "seedPhrase": "hire method athlete behind where detect estate spice obscure dawn aspect swift",
+    "password": "080504ddDD",
     "project_settings" : {
         "tries": 10,
         "close_browser_after_mint": true
