--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "launchpadLink": "https://www.magiceden.io/launchpad/trippin_ape_tribe",
-    "seedPhrase": "hire method athlete behind where detect estate spice obscure dawn aspect swift",
-    "password": "080504ddDD",
+    "launchpadLink": "launcpad link",
+    "seedPhrase": "your seedPhrase",
+    "password": "your password",
     "project_settings" : {
         "tries": 10,
         "close_browser_after_mint": true
